<resources>
    <string name="app_name">Signature</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="verify">Verify</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="login">Login</string>
    <string name="generate_keys">GENERATE KEYS</string>
    <string name="lock">Lock</string>
    <string name="generate_keys_notify">Generate keys</string>
    <string name="write_signature">Write Signature</string>
    <string name="share">Share</string>
    <string name="select_public_keys">Select Public Keys</string>
    <string name="select_document">Select Document</string>
    <string name="select_signature_file">Select Signature File</string>
    <string name="info">Info</string>
    <string name="info_app">Info App</string>
    <string name="aes_password">AES Password</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="enter">ENTER</string>
    <string name="forget">Forget ?</string>
    <string name="use_your_finger_print">Use your finger print</string>
    <string name="pass">Pass</string>
</resources>