<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aes_password"
            android:textAlignment="viewStart"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_d_pass_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_dialog"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_password_aes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ct_d_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/background_textviews">

            <ImageView
                android:id="@+id/iv_d_p_notify_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_password_aes" />

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:autofillHints=""
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#673AB7"
                android:textColorHint="#673AB7"
                android:textColorLink="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_d_p_password"
                app:layout_constraintStart_toEndOf="@+id/iv_d_p_notify_password"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_d_p_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hind_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/background_textviews">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_password_aes" />

            <EditText
                android:id="@+id/et_New_Password"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:autofillHints=""
                android:background="@drawable/background_edit_text"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#673AB7"
                android:textColorHint="#673AB7"
                android:textColorLink="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_d_p_new_password"
                app:layout_constraintStart_toEndOf="@+id/imageView22"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_d_p_new_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.516"
                app:srcCompat="@drawable/ic_hind_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/background_textviews">

            <ImageView
                android:id="@+id/iv_d_p_notify_retype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_wrong_file" />

            <EditText
                android:id="@+id/et_Retype_New_Password"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:autofillHints=""
                android:background="@drawable/background_edit_text"
                android:hint="@string/retype_new_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#673AB7"
                android:textColorHint="#673AB7"
                android:textColorLink="#673AB7"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_d_p_retype"
                app:layout_constraintStart_toEndOf="@+id/iv_d_p_notify_retype"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_d_p_retype"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hind_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_Enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/background_btn_view"
            android:text="@string/enter"
            android:textColor="#9C27B0"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cc_d_p_finger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/tv_d_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/forget"
            android:textColor="#673AB7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_d_finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/sw_d_finger"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_use_fignerprint" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="137dp"
            android:layout_height="27dp"
            android:gravity="center"
            android:text="@string/use_your_finger_print"
            android:textColor="#673AB7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>